# OrbbecSDK_v2

extensions/: CMakeLists.txt  README.md
extensions/depthengine/macOS/: libdepthengine.dylib
src/device/femtobolt/: FemtoBoltPresetManager.cpp
src/platform/usb/enumerator/: UsbEnumeratorLibusb.cpp
src/platform/usb/pal/mac/: MacUsbPal.cpp
src/platform/usb/uvc/: ObLibuvcDevicePort.cpp
